vlib/v/checker/tests/match_expr_non_void_stmt_last.out
vlib/v/checker/tests/match_expr_non_void_stmt_last.vv:9:4: error: statement cannot be used as return type `string` in `match` expression
    7 |         }
    8 |         []int {
    9 |             return arr.str()
      |             ~~~~~~~~~~~~~~~~
   10 |         }
   11 |     }
